--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2024.02.02, v3.11.1
+
+fix:
+- 779bf51 isConvertToJson
+
+feature:
+- 6edb2f7 redlint: @putout/plugin-filesystem v4.0.0
+
 2024.02.02, v3.11.0
 
 feature:
