--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2025.01.04, v3.17.1
+
+feature:
+- 0bbead6 redlint: ignore v7.0.0
+- 95f6a35 redlint: @putout/plugin-nodejs v13.1.1
+
 2024.12.13, v3.17.0
 
 feature:
