--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2025.01.21, v3.17.2
+
+feature:
+- f90afde redlint: @putout/plugin-filesystem v7.0.0
+- 731af76 redlint: @putout/formatter-codeframe v8.0.0
+
 2025.01.04, v3.17.1
 
 feature:
