--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2025.01.29, v3.18.1
+
+feature:
+- 610e884 redlint: putout v38.0.0
+- a5c6f65 redlint: eslint-plugin-putout v24.0.0
+
 2025.01.27, v3.18.0
 
 feature:
