--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2025.02.22, v3.19.1
+
+feature:
+- a494190 redlint: eslint-plugin-putout v25.0.1
+- c0aa350 redlint: @putout/plugin-eslint v12.1.0
+- 6c342cd redlint: @putout/test v12.0.1
+
 2025.02.11, v3.19.0
 
 feature:
