--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2025.05.29, v4.2.2
+
+feature:
+- 9af3190 redlint: eslint-plugin-putout v27.0.0
+- 62e5fc0 redlint: @putout/plugin-nodejs v16.3.0
+- a5d2831 redlint: @putout/plugin-eslint v14.0.1
+
 2025.04.17, v4.2.1
 
 feature:
