--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2025.09.10, v4.2.6
+
+feature:
+- 1202ff2 redlint: @putout/test v14.0.0
+- 508521c redlint: @putout/formatter-dump v6.1.0
+- b4ef300 redlint: eslint-plugin-putout v28.0.0
+
 2025.07.03, v4.2.5
 
 feature:
