--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2025.12.04, v4.3.0
+
+feature:
+- 6641b29 redlint: putout v41.0.0
+- d4bfc36 redlint: eslint-plugin-putout v29.0.2
+- 3e9bb85 redlint: @putout/plugin-filesystem v12.0.0
+- d27ee03 redlint: @putout/plugin-eslint v15.0.0
+- 4cb5362 redlint: @putout/operator-filesystem v10.0.0
+- dcfb0ae redlint: @putout/engine-runner v26.0.2
+- cc88189 redlint: @putout/formatter-codeframe v10.0.0
+- 4ac951d redlint: @putout/cli-choose v3.0.0
+
 2025.10.25, v4.2.7
 
 feature:
