--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2026.01.11, v5.0.4
+
+feature:
+- 63d38bf redlint: fullstore v4.0.0
+- 4fab77b redlint: @putout/cli-filesystem v3.0.0
+
 2026.01.09, v5.0.3
 
 feature:
