--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2026.02.06, v5.6.1
+
+feature:
+- b5a28d1 redlint: @putout/processor-filesystem v8.0.0
+- a520cc3 redlint: @putout/operator-filesystem v11.0.0
+
 2026.02.06, v5.6.0
 
 feature:
